--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="background"></div>
+    <div class="background">
+        <div class="shapes-container"></div>
+    </div>
     <div class="container">
         <h1>Welcome to the Game Selector</h1>
         <div class="games">
