--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <a href="https://fardad86.github.io/Tic-Tac-Toe/" class="game-link" target="_blank">
                 <div class="game-item">Tic-Tac-Toe</div>
             </a>
+            <a href="https://fardad86.github.io/super-tic-tac-toe/" class="game-link" target="_blank">
+                <div class="game-item">Super tic-tac-toe</div>
+            </a>
         </div>
         <div class="footer">
             <p>© 2024 Game Selector</p>
