--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="game-item">Tic-Tac-Toe</div>
             </a>
             <a href="https://fardad86.github.io/Super-tic-tac-toe/" class="game-link" target="_blank">
-                <div class="game-item">Super Tic-Tac-Toe</div>
+                <div class="game-item">Super tic-tac-toe</div>
             </a>
         </div>
         <div class="footer">
