--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="https://fardad86.github.io/Tic-Tac-Toe/" class="game-link" target="_blank">
                 <div class="game-item">Tic-Tac-Toe</div>
             </a>
-            <a href="https://fardad86.github.io/Super-tic-tac-toe/" class="game-link" target="_blank">
+            <a href="https://fardad86.github.io/super-tic-tac-toe/" class="game-link" target="_blank">
                 <div class="game-item">Super tic-tac-toe</div>
             </a>
         </div>
