--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <a href="https://fardad86.github.io/go/" class="game-link" target="_blank">
                 <div class="game-item">Go game</div>
             </a>
+            <a href="https://fardad86.github.io/Chess/" class="game-link" target="_blank">
+                <div class="game-item">Chess</div>
+            </a>
         </div>
         <div class="footer">
             <p>© 2024 Game Selector</p>
